# GNN_EyeTracking

./: .gitignore  README.md  evaluation.py  main.py  pyproject.toml  repomix-output.xml
src/gnn_ev_toolbox/: data_tools.py  gnn_tools.py  models.py  three_et_dataloader.py
src/test/: test_three_et_dataloader.py
