[project]
name = "gnn-eyetracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=3.0.2",
    "pyg-lib==0.6.0+pt210cu128",
    "torch==2.10.*",
    "torch-cluster==1.6.3+pt210cu128",
    "torch-geometric==2.7.*",
    "torch-scatter==2.1.2+pt210cu128",
    "torch-sparse==0.6.18+pt210cu128",
    "torchaudio==2.10.*",
    "torchvision==0.25.*",
    "h5py",
    "tqdm>=4.67.3",
    "tensorboard>=2.20.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["src/test"]
pythonpath = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gnn_ev_toolbox"]

[tool.uv]
find-links = ["https://data.pyg.org/whl/torch-2.10.0+cu128.html"]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
